Bug 1113562 - Expected delay time of tasks should not be the latency of those kind. r=sinker

--HG--
extra : rebase_source : b5e012fb6570e87270a0924fbe395dc56e6242ec